--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 
 # dependencies
 /node_modules
+server/node_modules
 /.pnp
 .pnp.js
+.env
+server/.env
 
 # testing
 /coverage
@@ -21,3 +24,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# keys
+
